# punctuator-pytorch

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  init.sh  pyproject.toml  requirements.txt  sample-requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: checks.yml  main.yml  pythonapp.yml
api/: main.py
credentials/: .env-sample
data/raw/: dev.csv  test.csv
ml/: Dockerfile
ml/punctuator/: pyproject.toml
ml/punctuator/tasks/: elmo_prediction.py  train_elmo.py  train_token.py
punctuator/: Makefile  config.py  datasets.py  manage.py  models.py  path_manager.py  pyproject.toml  utils.py
punctuator/punctuator/: datasets.py  models.py  utils.py
punctuator/src/: config.py  datasets.py  models.py  path_manager.py
punctuator/src/core/: commands.py  config.py  path_manager.py
punctuator/src/datasets/: datasets.py  utils.py
punctuator/tasks/: allennlp_tagger.py  allennlp_tagget.py  create_dataset.py  elmo.py  elmo_prediction.py  elmo_train.py  flair_sequence_tagger_example.py  glove.py  observe_dataset.py  prediction.py  simple_tagger.py  token.py  token_train.py  train.py  train_elmo.py  train_glove.py  train_token.py  validate.py  validate_saved_model.py
