[tool.poetry]
name = "punctuator"
version = "0.1.0"
description = "PyTorch and AllenNLP based sentence restoration model"
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.3"
pytorch-nlp = "^0.5.0"
fastapi = "^0.49.0"
uvicorn = "^0.11.3"
allennlp = "^0.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
yapf = "^0.30.0"
pytest = "^5.4.1"
isort = "^4.3.21"
environs = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
