[tool.poetry]
name = "punctuator"
version = "0.1.0"
description = "PyTorch and AllenNLP based sentence restoration model"
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
pandas = "^1.0.1"
pytorch-nlp = "^0.5.0"
fastapi = "^0.61.2"
uvicorn = "^0.11.7"
allennlp = "^1.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7.9"
yapf = "^0.30.0"
pytest = "^6.2.3"
isort = "^4.3.21"
environs = "^9.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
