[tool.poetry]
name = "punctuator-pytorch"
version = "0.1.0"
description = "PyTorch and AllenNLP based sentence restoration model"
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
allennlp = "^0.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
flake8 = "^3.7.9"
yapf = "^0.29.0"
pytest = "^5.3.5"
isort = "^4.3.21"
environs = "^7.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
